--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="images/profile.jpg" alt="Yogya Singhal" class="profile" />
+    <img src="profile.jpg" alt="Yogya Singhal" class="profile" />
     <h1 class="name">Yogya Singhal</h1>
     <p class="title">Student — Delhi Technological University</p>
     <a class="btn-linkedin" href="https://www.linkedin.com/in/yogya-singhal-609600258/" target="_blank">LinkedIn</a>
